cards/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    user-select: none;
}

body {
    background-color: hsl(0, 50%, 4%);
    color: white;
    font-family: 'Belanosima', sans-serif;
}

h1 {
    text-align: center;
    margin: 2rem 0;
}

h3 {
    text-align: center;
    font-size: 1.5rem;
    margin:10px 0 0px 0;
    position: relative;
    top:-50px;
    text-decoration: solid transparent 3px;
    text-underline-offset: 20px;
}

p {
    text-align:start;
    height: 85px;
    font-size: 1.2rem;
    padding: 0 10px 10px 10px;
}

.container {
    display: grid;
    justify-items: center;
    grid-template-columns: repeat(3, 1fr);
    margin: 0 12rem;
    height: 60vh;
}

.card {
    position: relative;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    transition: all 800ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
    overflow: hidden;
    max-width: 300px;

    h3 {
        text-shadow: 0px 0px 0px hsla(0, 0%, 0%, 0);
        transition: text-decoration 600ms ease-out 400ms,
        top 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 200ms,
        text-underline-offset 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 400ms,
        text-shadow 500ms ease-in-out 400ms;
    }

    p {
        width: 100%;
        height: 100%;
        display: flex;
        align-items: flex-end;
        text-shadow: 0px 0px 0px hsla(0, 0%, 0%, 0);
        transition: bottom 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275), text-shadow 500ms ease-in-out 400ms;
        position: relative;
        bottom: -100px;
    }

    & img {
        position: absolute;
        /* inset: 0; prevents from centering the image */
        height: 100%;
        width: 100%;
        object-fit: cover;
        z-index: -2;
        transition: all 400ms cubic-bezier(0.46, 0.16, 0, 1.06);
    }

    &::before {
        content: ""; /* only works with pseudo-elements */
        position: absolute;
        inset: 0;
        height: 100%;
        width: 100%;
        z-index: -1;
        background:rgba(255, 119, 0, 0); 
    }

    &:hover{
        background:rgba(255, 119, 0, 0.4);
        box-shadow: 0px 2px 10px 10px rgba(255, 119, 0, 0.85);

        & img {
            height: 115%;
            width: 115%;
        }

        & p{
            bottom: 0;
            text-shadow: 0px 3px 2px hsla(0, 0%, 0%, 0.40);
        }

        & h3 {
            text-shadow: 0px 3px 0px hsla(0, 0%, 0%, 0.40);
            top: 0;
            text-decoration: underline solid white 3px;
            text-underline-offset: 6px;
        }
    }
}

@media (max-width: 1350px) {
    .container {
        grid-template-columns: 1fr;
        margin: 0 2rem;
    }

    .card {
        margin:0 0 4rem 0;
        height: 60vh;
    }
    
}

